--- a/index.html
+++ b/index.html
@@ -197,7 +197,10 @@ function loadSample(type) {
     document.getElementById("emailContent").value = samples[type];
 }
 
-/* ANALYSIS */
+/* ==========================================================
+   ANALYSIS
+   ========================================================== */
+
 async function analyzeEmail() {
     const email = document.getElementById("emailContent").value.trim();
     const btn = document.getElementById("analyzeBtn");
@@ -208,96 +211,110 @@ async function analyzeEmail() {
     btn.innerHTML = '<div class="spinner"></div> Analyzing...';
     btn.disabled = true;
 
+    let response, data;
+
     try {
-        const response = await fetch("https://phishing-backend-axca.onrender.com/predict", {
+        response = await fetch("https://phishing-backend-axca.onrender.com/predict", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ email })
+            body: JSON.stringify({ email: email })
         });
 
-        const data = await response.json();
-
-        const status = data.prediction;  // 1 = phishing, -1 = suspicious, 0 = safe
-
-        let title = "";
-        let badge = "";
-        let barColor = "";
-        let score = 0;
-        let confidenceText = "";
-
-        if (status === 1) {
-            title = "🚨 Phishing Detected";
-            badge = "bg-red-100 text-red-700";
-            barColor = "bg-red-500";
-            score = data.phishing_prob;
-            confidenceText = `${score}% confidence this email is phishing.`;
-        }
-        else if (status === -1) {
-            title = "⚠️ Suspicious Email";
-            badge = "bg-yellow-100 text-yellow-700";
-            barColor = "bg-yellow-500";
-            score = data.phishing_prob;
-            confidenceText = `${score}% chance this email is suspicious. Contains risky indicators.`;
-        }
-        else {
-            title = "✅ Safe Email";
-            badge = "bg-green-100 text-green-700";
-            barColor = "bg-green-500";
-            score = data.safe_prob;
-            confidenceText = `${score}% confidence this email is safe.`;
+        if (!response.ok) {
+            throw new Error("Backend returned non-200");
         }
 
-        // DETECTED INDICATORS
-        const indicators = [];
-        const lower = email.toLowerCase();
-
-        if (lower.includes("verify") || lower.includes("confirm"))
-            indicators.push("Verification request detected");
-
-        if (lower.includes("urgent") || lower.includes("immediately"))
-            indicators.push("Urgency / pressure language detected");
-
-        if (email.includes("http://") || email.includes("https://"))
-            indicators.push("Presence of external links");
-
-        if (email.length < 40)
-            indicators.push("Email unusually short (possible scam)");
-
-        const indicatorList = indicators.length
-            ? indicators.map(i => `<li>${i}</li>`).join("")
-            : "<li>No major phishing indicators detected</li>";
-
-        // DISPLAY RESULT
-        resultBox.classList.remove("hidden");
-        resultBox.innerHTML = `
-            <div class="flex flex-col sm:flex-row items-start sm:items-center justify-between mb-4">
-                <h3 class="text-xl font-bold">${title}</h3>
-
-                <span class="px-3 py-1 text-sm font-semibold rounded-lg mt-2 sm:mt-0 ${badge}">
-                    ${status === 1 ? "High Risk" : status === -1 ? "Medium Risk" : "Low Risk"}
-                </span>
-            </div>
-
-            <p class="text-gray-700 mb-2"><strong>Confidence Score</strong></p>
-
-            <div class="w-full bg-gray-200 rounded-full h-3 mb-3">
-                <div class="h-3 rounded-full transition-all duration-500 ${barColor}"
-                    style="width: ${score}%;">
-                </div>
-            </div>
-
-            <p class="text-gray-700 mb-4">${confidenceText}</p>
-
-            <p class="font-semibold text-gray-700 mb-2">Detected Indicators:</p>
-            <ul class="list-disc ml-6 text-gray-600">
-                ${indicatorList}
-            </ul>
-        `;
-
-    } catch (e) {
-        alert("Error contacting backend.");
-        console.error("Backend error:", e);
+        data = await response.json();
+    } 
+    catch (err) {
+        console.error("Backend error:", err);
+        alert("Backend is waking up. Please wait 10–15 seconds and try again.");
+        btn.innerHTML = "Analyze Email";
+        btn.disabled = false;
+        return;
     }
+
+    /* ===========================
+       CLASS INTERPRETATION
+       =========================== */
+    const status = data.prediction;   // 1 = phishing, -1 = suspicious, 0 = safe
+
+    let title = "";
+    let badge = "";
+    let barColor = "";
+    let score = 0;
+    let confidenceText = "";
+
+    if (status === 1) {
+        title = "🚨 Phishing Detected";
+        badge = "bg-red-100 text-red-700";
+        barColor = "bg-red-500";
+        score = data.phishing_prob;
+        confidenceText = `${score}% confidence this email is phishing.`;
+    }
+    else if (status === -1) {
+        title = "⚠️ Suspicious Email";
+        badge = "bg-yellow-100 text-yellow-700";
+        barColor = "bg-yellow-500";
+        score = data.phishing_prob;
+        confidenceText = `${score}% chance this email is suspicious. Contains risky indicators.`;
+    }
+    else {
+        title = "✅ Safe Email";
+        badge = "bg-green-100 text-green-700";
+        barColor = "bg-green-500";
+        score = data.safe_prob;
+        confidenceText = `${score}% confidence this email is safe.`;
+    }
+
+    /* ===========================
+       INDICATORS
+       =========================== */
+    const indicators = [];
+    const lower = email.toLowerCase();
+
+    if (lower.includes("verify") || lower.includes("confirm"))
+        indicators.push("Verification request detected");
+    if (lower.includes("urgent") || lower.includes("immediately"))
+        indicators.push("Urgency / pressure language detected");
+    if (email.includes("http://") || email.includes("https://"))
+        indicators.push("Presence of external links");
+    if (email.length < 40)
+        indicators.push("Email unusually short (possible scam)");
+
+    const indicatorList = indicators.length
+        ? indicators.map(i => `<li>${i}</li>`).join("")
+        : "<li>No major phishing indicators detected</li>";
+
+    /* ===========================
+       DISPLAY RESULTS
+       =========================== */
+    resultBox.classList.remove("hidden");
+
+    resultBox.innerHTML = `
+        <div class="flex flex-col sm:flex-row items-start sm:items-center justify-between mb-4">
+            <h3 class="text-xl font-bold">${title}</h3>
+
+            <span class="px-3 py-1 text-sm font-semibold rounded-lg mt-2 sm:mt-0 ${badge}">
+                ${status === 1 ? "High Risk" : status === -1 ? "Medium Risk" : "Low Risk"}
+            </span>
+        </div>
+
+        <p class="text-gray-700 mb-2"><strong>Confidence Score</strong></p>
+
+        <div class="w-full bg-gray-200 rounded-full h-3 mb-3">
+            <div class="h-3 rounded-full transition-all duration-500 ${barColor}"
+                style="width: ${score}%;">
+            </div>
+        </div>
+
+        <p class="text-gray-700 mb-4">${confidenceText}</p>
+
+        <p class="font-semibold text-gray-700 mb-2">Detected Indicators:</p>
+        <ul class="list-disc ml-6 text-gray-600">
+            ${indicatorList}
+        </ul>
+    `;
 
     btn.innerHTML = "Analyze Email";
     btn.disabled = false;
@@ -320,5 +337,6 @@ function closeModelModal() {
     document.getElementById("modelModal").classList.add("hidden");
 }
 </script>
+
 </body>
 </html>
